Refactor index.html for improved layout and content
Updated content and styling for the Cricket World website.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
   <style>
     body {
       margin: 0;
-      font-family: Arial;
+      font-family: Arial, sans-serif;
       background-color: NavajoWhite;
     }
 
-    /* Header */
     .header {
       background-color: Wheat;
       padding: 15px;
@@ -20,7 +19,6 @@
       margin: 0;
     }
 
-    /* Menu */
     .menu {
       background-color: BurlyWood;
       display: flex;
@@ -38,12 +36,10 @@
       text-decoration: underline;
     }
 
-    /* Main Layout */
     .container {
       display: flex;
     }
 
-    /* Services */
     .services {
       width: 25%;
       background-color: PapayaWhip;
@@ -54,7 +50,6 @@
       padding-left: 18px;
     }
 
-    /* Content */
     .content {
       width: 75%;
       padding: 15px;
@@ -65,17 +60,15 @@
       margin-top: 0;
     }
   </style>
-
 </head>
+
 <body>
 
-  <!-- HEADER -->
   <div class="header">
     <h1>Cricket World</h1>
-    <p>Simple cricket information website</p>
+    <p>Your simple guide to the world of cricket</p>
   </div>
 
-  <!-- MENU -->
   <div class="menu">
     <a href="#home">Home</a>
     <a href="#login">Login</a>
@@ -85,101 +78,88 @@
     <a href="#contact">Contact Us</a>
   </div>
 
-  <!-- BODY -->
   <div class="container">
 
-    <!-- SERVICES -->
     <div class="services">
-      <h3>Services</h3>
-      <ul>
+      <h3>Our Services</h3>
+      <ul> 
         <li><a href="#live">Live Scores</a></li>
-        <li><a href="#fixtures">Match Fixtures</a></li>
-        <li><a href="#teams">Team Info</a></li>
+        <li><a href="#fixtures">Match Schedules</a></li>
+        <li><a href="#teams">Teams</a></li>
         <li><a href="#rules">Cricket Rules</a></li>
         <li><a href="#gallery">Photo Gallery</a></li>
       </ul>
     </div>
 
-    <!-- CONTENT -->
     <div class="content">
 
-      <!-- HOME -->
       <div id="home">
         <h2>Welcome to Cricket World</h2>
 
-        <h3>Top 3 Teams</h3>
+        <h3>Top Cricket Teams</h3>
         <ul>
           <li>India</li>
           <li>Australia</li>
           <li>England</li>
         </ul>
 
-        <h3>About Cricket</h3>
+        <h3>About the Game</h3>
         <p>
-          Cricket is a bat-and-ball game played between two teams of eleven players.
-          The game is played on a field with a 22-yard pitch and a wicket at each end.
+          Cricket is one of the most popular sports in the world. It is played between
+          two teams of eleven players each, using a bat and a ball on a large open field.
+          The objective is simple—score more runs than the opposing team.
         </p>
       </div>
 
-      <!-- LOGIN -->
       <div id="login">
         <h2>Login</h2>
-        <p>This is a placeholder for the login page.</p>
+        <p>Access your account to explore personalized cricket content.</p>
       </div>
 
-      <!-- REGISTRATION -->
       <div id="registration">
         <h2>Registration</h2>
-        <p>Registration page for new cricket portal users.</p>
+        <p>Create a new account to become part of the Cricket World community.</p>
       </div>
 
-      <!-- CATALOGUE -->
       <div id="catalogue">
         <h2>Cricket Catalogue</h2>
-        <p>Cricket items like bats, balls, pads can be shown here.</p>
+        <p>Browse cricket equipment such as bats, balls, gloves, and protective gear.</p>
       </div>
 
-      <!-- CART -->
       <div id="cart">
-        <h2>Cart</h2>
-        <p>Your selected cricket items will appear here.</p>
+        <h2>Your Cart</h2>
+        <p>View and manage the cricket items you have selected.</p>
       </div>
 
-      <!-- CONTACT -->
       <div id="contact">
         <h2>Contact Us</h2>
         <p>Email: support@cricketworld.com</p>
         <p>Phone: +91-XXXXXXXXXX</p>
       </div>
 
-      <!-- LIVE SCORES -->
       <div id="live">
         <h2>Live Scores</h2>
-        <p>Live cricket scores will be shown here.</p>
+        <p>Stay updated with real-time scores from ongoing matches.</p>
       </div>
 
-      <!-- FIXTURES -->
       <div id="fixtures">
         <h2>Match Fixtures</h2>
-        <p>Upcoming cricket match schedules.</p>
+        <p>Check out upcoming international and domestic match schedules.</p>
       </div>
 
-      <!-- TEAMS -->
       <div id="teams">
         <h2>Teams</h2>
-        <p>Information about international and domestic teams.</p>
+        <p>Learn more about cricket teams from around the world.</p>
       </div>
 
-      <!-- RULES -->
       <div id="rules">
         <h2>Cricket Rules</h2>
-        <p>Basic rules of cricket explained here.</p>
+        <p>Understand the basic rules and playing format of cricket.</p>
       </div>
 
-      <!-- GALLERY -->
       <div id="gallery">
         <h2>Photo Gallery</h2>
-        <p>Cricket grounds and players photos.</p>
+        <p>Explore photos of cricket players, stadiums, and memorable moments.</p>
       </div>
 
     </div>
