Revamp index.html with new styles and layout
Updated the layout and styles of the Cricket World webpage, including changes to colors, text alignment, and structure.

--- a/index.html
+++ b/index.html
@@ -5,35 +5,26 @@
 
   <style>
     body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: NavajoWhite;
+      font-family: Arial;
+      background-color: lightblue;
     }
 
     .header {
-      background-color: Wheat;
-      padding: 15px;
-    }
-
-    .header h1 {
-      margin: 0;
+      background-color: #d6ecff;
+      padding: 10px;
+      text-align: center;
     }
 
     .menu {
-      background-color: BurlyWood;
-      display: flex;
-      justify-content: space-around;
+      background-color: #b3d9ff;
       padding: 10px;
+      text-align: center;
     }
 
     .menu a {
+      margin: 10px;
       text-decoration: none;
-      color: black;
-      font-weight: bold;
-    }
-
-    .menu a:hover {
-      text-decoration: underline;
+      color: blue;
     }
 
     .container {
@@ -42,22 +33,23 @@
 
     .services {
       width: 25%;
-      background-color: PapayaWhip;
+      background-color: #e6f2ff;
       padding: 10px;
-    }
-
-    .services ul {
-      padding-left: 18px;
+      color: purple;
     }
 
     .content {
       width: 75%;
-      padding: 15px;
-      background-color: NavajoWhite;
+      padding: 10px;
+      background-color: #f9fcff;
     }
 
-    h2 {
-      margin-top: 0;
+    h1, h2, h3 {
+      color: red;
+    }
+
+    p {
+      color: green;
     }
   </style>
 </head>
@@ -66,7 +58,7 @@
 
   <div class="header">
     <h1>Cricket World</h1>
-    <p>Your simple guide to the world of cricket</p>
+    <p>Your simple guide to cricket</p>
   </div>
 
   <div class="menu">
@@ -75,60 +67,58 @@
     <a href="#registration">Registration</a>
     <a href="#catalogue">Catalogue</a>
     <a href="#cart">Cart</a>
-    <a href="#contact">Contact Us</a>
+    <a href="#contact">Contact</a>
   </div>
 
   <div class="container">
 
     <div class="services">
-      <h3>Our Services</h3>
-      <ul> 
+      <h3>Services</h3>
+      <ul>
         <li><a href="#live">Live Scores</a></li>
-        <li><a href="#fixtures">Match Schedules</a></li>
+        <li><a href="#fixtures">Fixtures</a></li>
         <li><a href="#teams">Teams</a></li>
-        <li><a href="#rules">Cricket Rules</a></li>
-        <li><a href="#gallery">Photo Gallery</a></li>
+        <li><a href="#rules">Rules</a></li>
+        <li><a href="#gallery">Gallery</a></li>
       </ul>
     </div>
 
     <div class="content">
 
       <div id="home">
-        <h2>Welcome to Cricket World</h2>
+        <h2>Welcome</h2>
 
-        <h3>Top Cricket Teams</h3>
+        <h3>Top Teams</h3>
         <ul>
           <li>India</li>
           <li>Australia</li>
           <li>England</li>
         </ul>
 
-        <h3>About the Game</h3>
         <p>
-          Cricket is one of the most popular sports in the world. It is played between
-          two teams of eleven players each, using a bat and a ball on a large open field.
-          The objective is simple—score more runs than the opposing team.
+          Cricket is a popular sport played between two teams of eleven players.
+          The goal of the game is to score more runs than the opponent.
         </p>
       </div>
 
       <div id="login">
         <h2>Login</h2>
-        <p>Access your account to explore personalized cricket content.</p>
+        <p>Login page content goes here.</p>
       </div>
 
       <div id="registration">
         <h2>Registration</h2>
-        <p>Create a new account to become part of the Cricket World community.</p>
+        <p>New users can register here.</p>
       </div>
 
       <div id="catalogue">
-        <h2>Cricket Catalogue</h2>
-        <p>Browse cricket equipment such as bats, balls, gloves, and protective gear.</p>
+        <h2>Catalogue</h2>
+        <p>Cricket equipment details.</p>
       </div>
 
       <div id="cart">
-        <h2>Your Cart</h2>
-        <p>View and manage the cricket items you have selected.</p>
+        <h2>Cart</h2>
+        <p>Your selected items.</p>
       </div>
 
       <div id="contact">
@@ -139,27 +129,27 @@
 
       <div id="live">
         <h2>Live Scores</h2>
-        <p>Stay updated with real-time scores from ongoing matches.</p>
+        <p>Live match updates.</p>
       </div>
 
       <div id="fixtures">
-        <h2>Match Fixtures</h2>
-        <p>Check out upcoming international and domestic match schedules.</p>
+        <h2>Fixtures</h2>
+        <p>Upcoming matches.</p>
       </div>
 
       <div id="teams">
         <h2>Teams</h2>
-        <p>Learn more about cricket teams from around the world.</p>
+        <p>Team information.</p>
       </div>
 
       <div id="rules">
-        <h2>Cricket Rules</h2>
-        <p>Understand the basic rules and playing format of cricket.</p>
+        <h2>Rules</h2>
+        <p>Basic cricket rules.</p>
       </div>
 
       <div id="gallery">
-        <h2>Photo Gallery</h2>
-        <p>Explore photos of cricket players, stadiums, and memorable moments.</p>
+        <h2>Gallery</h2>
+        <p>Cricket photos.</p>
       </div>
 
     </div>
